updated the whole app using recycler view and SQLite database

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">notes</string>
+
+    //title name
+    <string name="title">Notes</string>
+
 </resources>
